[package]
name = "discord-proxy-for-neos"
version = "0.3.0"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.1.0", features = ["full"] }
warp = "~0.3.0" # uses tokio 1.0
serde = { version = "^1.0.126", features = ["derive"] }
serde_json = "^1.0.0"
hyper = "~0.14.0"
hyper-tls = "~0.5.0"
bytes = "^1.0.0"
percent-encoding = "^2.1.0"
bincode = "~1.3.3"
hex = "~0.4.3"
